--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap"
+            rel="stylesheet" />
+        <link rel="stylesheet" href="input.css" />
+        <title>Loopstudios Website</title>
+        <section id="hero">
+            <div class="container max-w-6xl mx-auto px-6 py-12 md:px-0">
+                <!-- Navbar Container -->
+                <nav
+                    class="flex item-center justify-between font-bold text-white">
+                    <img src="images/logo.svg" alt="loopstuidos logo" />
+                </nav>
+            </div>
+        </section>
     </head>
-    <body>
-        <h3>Loopstudios Website</h3>
-    </body>
+    <body></body>
 </html>
