--- a/index.html
+++ b/index.html
@@ -6,19 +6,57 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="input.css" />
+
+        <link rel="stylesheet" href="css/style.css" />
         <title>Loopstudios Website</title>
+    </head>
+    <body>
         <section id="hero">
-            <div class="container max-w-6xl mx-auto px-6 py-12 md:px-0">
-                <!-- Navbar Container -->
+            <!-- Navbar Container -->
+            <div class="container mx-auto max-w-6xl px-6 py-12">
+                <!-- Menu/Logo Container -->
                 <nav
-                    class="flex item-center justify-between font-bold text-white">
-                    <img src="images/logo.svg" alt="loopstuidos logo" />
+                    class="flex items-center justify-between font-bold text-white">
+                    <!-- Logo -->
+                    <img src="images/logo.svg" alt="" />
+                    <!-- Menu -->
+                    <div class="hidden h-10 font-alata md:flex md:space-x-8">
+                        <div class="group">
+                            <a href="#">About</a>
+                            <div
+                                class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+                        </div>
+                        <div class="group">
+                            <a href="#">Careers</a>
+                            <div
+                                class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+                        </div>
+                        <div class="group">
+                            <a href="#">Events</a>
+                            <div
+                                class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+                        </div>
+                        <div class="group">
+                            <a href="#">Products</a>
+                            <div
+                                class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+                        </div>
+                        <div class="group">
+                            <a href="#">Support</a>
+                            <div
+                                class="mx-2 group-hover:border-b group-hover:border-blue-50"></div>
+                        </div>
+                    </div>
+                    <!-- Hamburger Logo  -->
                 </nav>
+                <!-- Mobile View -->
+                <div
+                    class="md-6xl mb-32 mt-32 max-w-lg border-2 p-4 font-sans text-4xl uppercase text-white md:m-32 md:mx-0 md:p-10">
+                    Impressive Experiences That Deliver
+                </div>
             </div>
         </section>
-    </head>
-    <body></body>
+    </body>
 </html>
