--- a/index.html
+++ b/index.html
@@ -58,5 +58,28 @@
                 </div>
             </div>
         </section>
+        <!-- Feature Section -->
+        <section id="feature">
+            <div
+                class="container relative mx-auto my-32 flex max-w-6xl flex-col px-6 text-gray-900 md:flex-row md:px-0">
+                <img
+                    src="images/desktop/image-interactive.jpg"
+                    alt="A guy with virtual reality headset" />
+                <div
+                    class="top-48 bg-white pr-0 md:absolute md:right-0 md:py-20 md:pl-20">
+                    <h2
+                        class="mb-6 mt-10 max-w-lg text-center font-sans text-4xl uppercase text-gray-900 md:mt-0 md:text-left md:text-5xl">
+                        The leader in interactive vr
+                    </h2>
+                    <p class="max-w-md">
+                        Founded in 2011, Loopstudios has been producing
+                        world-class virtual reality projects for some of the
+                        best companies around the globe. Our award-winning
+                        creations have trasnformed businesses throgh digital
+                        experiences that bind to their brand
+                    </p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
