switching to a new branch - getting done the first part of the header grid section

--- a/index.html
+++ b/index.html
@@ -81,5 +81,23 @@
                 </div>
             </div>
         </section>
+        <!-- Grid Section -->
+        <section id="creations">
+            <div
+                class="container mx-auto my-32 max-w-6xl px-6 text-gray-900 md:px-0">
+                <!-- Header of the grid -->
+                <div class="mb-20 flex justify-center md:justify-between">
+                    <h2
+                        class="text-center text-4xl uppercase md:text-left md:text-5xl">
+                        Our Creations
+                    </h2>
+                    <!-- Button part -->
+                    <button
+                        class="my-0 hidden border-2 border-black px-10 py-2 font-alata font-bold uppercase tracking-widest hover:bg-black hover:text-white md:block">
+                        See All
+                    </button>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
