adding custom tailwinds styles for the flex section in the items containers

--- a/index.html
+++ b/index.html
@@ -92,10 +92,30 @@
                         Our Creations
                     </h2>
                     <!-- Button part -->
-                    <button
-                        class="my-0 hidden border-2 border-black px-10 py-2 font-alata font-bold uppercase tracking-widest hover:bg-black hover:text-white md:block">
-                        See All
-                    </button>
+                    <button class="btn hidden md:block">See All</button>
+                </div>
+                <!-- Items Container-->
+                <div
+                    class="flex w-full flex-col justify-between space-y-6 text-2xl uppercase text-white md:flex-row md:space-y-0">
+                    <!-- item 1 -->
+                    <div class="group relative overflow-hidden md:w-1/4">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-deep-earth.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-deep-earth.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Gradient -->
+                        <div
+                            class="from-transparent.to-gray-900 absolute bottom-0 left-0 right-0 top-0 bg-gradient-to-b group-hover:from-gray-50 group-hover:to-white group-hover:opacity-20"></div>
+                        <!-- Text -->
+                        <h5
+                            class="absolute bottom-4 w-52 px-6 duration-200 group-hover:scale-110 group-hover:text-black md:bottom-8 md:px-10">
+                            Deep Earth
+                        </h5>
+                    </div>
                 </div>
             </div>
         </section>
