main section flexbox finished

--- a/index.html
+++ b/index.html
@@ -111,7 +111,116 @@
                         <!-- Text -->
                         <h5>Deep Earth</h5>
                     </div>
+                    <!-- item 2 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-night-arcade.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-night-arcade.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>Night Arcade</h5>
+                    </div>
+                    <!-- item 3 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-soccer-team.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-soccer-team.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>Soccer Team VR</h5>
+                    </div>
+                    <!-- item 3 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-grid.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-grid.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>The Grid</h5>
+                    </div>
                 </div>
+                <!-- Item Container 2 -->
+                <div class="item-container mt-10">
+                    <!-- item 1 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-from-above.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-from-above.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>From Above VR</h5>
+                    </div>
+                    <!-- item 2 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-pocket-borealis.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-pocket-borealis.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>Pocket Borealis</h5>
+                    </div>
+                    <!-- item 3 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-curiosity.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-curiosity.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>The Curiosity</h5>
+                    </div>
+                    <!-- item 3 -->
+                    <div class="item group">
+                        <img
+                            class="hidden w-full duration-200 group-hover:scale-110 md:block"
+                            src="images/desktop/image-fisheye.jpg"
+                            alt="the earth wallpaper" />
+                        <img
+                            class="w-full md:hidden"
+                            src="images/mobile/image-fisheye.jpg"
+                            alt="the earth wallpaper" />
+                        <!-- Item Gradient -->
+                        <div class="item-gradient"></div>
+                        <!-- Text -->
+                        <h5>Fisheye</h5>
+                    </div>
+                </div>
+                <!-- Footer Section -->
             </div>
         </section>
     </body>
