--- a/index.html
+++ b/index.html
@@ -220,8 +220,58 @@
                         <h5>Fisheye</h5>
                     </div>
                 </div>
-                <!-- Footer Section -->
+                <!-- Buttom Section -->
+                <div flex justify-content md:hidden mt-10>
+                    <button class="btn w-full md:hidden">See All</button>
+                </div>
             </div>
         </section>
+        <!-- Footer Section -->
+        <div class="bg-black">
+            <div class="container mx-auto max-w-6xl py-10">
+                <!-- Flex Container Items -->
+                <div
+                    class="mb-8 flex flex-col items-center space-y-6 md:flex-row md:items-start md:justify-between md:space-y-0">
+                    <!-- Logo Container-->
+                    <div
+                        class="items-align-center flex flex-col space-y-8 md:items-start md:space-y-4">
+                        <div class="h-8">
+                            <img src="images/logo.svg" class="w-44 md:ml-3" />
+                        </div>
+                        <!-- Menu Items Container -->
+                        <div
+                            class="flex flex-col items-center space-y-4 font-bold text-white md:ml-3 md:flex-row md:space-x-6 md:space-y-0">
+                            <div class="group h-10">
+                                <a href="#">About</a>
+                                <div
+                                    class="group-hover:border-b group-hover:border-blue-50"></div>
+                            </div>
+                            <div class="group h-10">
+                                <a href="#">Careers</a>
+                                <div
+                                    class="group-hover:border-b group-hover:border-blue-50"></div>
+                            </div>
+                            <div class="group h-10">
+                                <a href="#">Events</a>
+                                <div
+                                    class="group-hover:border-b group-hover:border-blue-50"></div>
+                            </div>
+                            <div class="group h-10">
+                                <a href="#">Products</a>
+                                <div
+                                    class="group-hover:border-b group-hover:border-blue-50"></div>
+                            </div>
+                            <div class="group h-10">
+                                <a href="#">Support</a>
+                                <div
+                                    class="group-hover:border-b group-hover:border-blue-50"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Social Container -->
+                </div>
+            </div>
+        </div>
     </body>
 </html>
