logo section in the footer of the page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <!-- Logo -->
                     <img src="images/logo.svg" alt="" />
                     <!-- Menu -->
-                    <div class="hidden h-10 font-alata md:flex md:space-x-8">
+                    <div class="hidden h-8 font-alata md:flex md:space-x-8">
                         <div class="group">
                             <a href="#">About</a>
                             <div
@@ -241,27 +241,27 @@
                         <!-- Menu Items Container -->
                         <div
                             class="flex flex-col items-center space-y-4 font-bold text-white md:ml-3 md:flex-row md:space-x-6 md:space-y-0">
-                            <div class="group h-10">
+                            <div class="group h-8">
                                 <a href="#">About</a>
                                 <div
                                     class="group-hover:border-b group-hover:border-blue-50"></div>
                             </div>
-                            <div class="group h-10">
+                            <div class="group h-8">
                                 <a href="#">Careers</a>
                                 <div
                                     class="group-hover:border-b group-hover:border-blue-50"></div>
                             </div>
-                            <div class="group h-10">
+                            <div class="group h-8">
                                 <a href="#">Events</a>
                                 <div
                                     class="group-hover:border-b group-hover:border-blue-50"></div>
                             </div>
-                            <div class="group h-10">
+                            <div class="group h-8">
                                 <a href="#">Products</a>
                                 <div
                                     class="group-hover:border-b group-hover:border-blue-50"></div>
                             </div>
-                            <div class="group h-10">
+                            <div class="group h-8">
                                 <a href="#">Support</a>
                                 <div
                                     class="group-hover:border-b group-hover:border-blue-50"></div>
@@ -270,6 +270,45 @@
                     </div>
 
                     <!-- Social Container -->
+                    <div
+                        class="flex flex-col items-start justify-between space-y-4 text-gray-500">
+                        <div
+                            class="mx-auto flex items-center justify-center space-x-4 md:mx-0 md:justify-end">
+                            <!-- Icon 1 -->
+                            <div class="group h-8">
+                                <a href="#">
+                                    <img
+                                        src="images/icon-facebook.svg"
+                                        class="h-6" />
+                                </a>
+                            </div>
+                            <div class="group h-8">
+                                <a href="#">
+                                    <img
+                                        src="images/icon-twitter.svg"
+                                        class="h-6" />
+                                </a>
+                            </div>
+                            <div class="group h-8">
+                                <a href="#">
+                                    <img
+                                        src="images/icon-instagram.svg"
+                                        class="h-6" />
+                                </a>
+                            </div>
+                            <div class="group h-8">
+                                <a href="#">
+                                    <img
+                                        src="images/icon-pinterest.svg"
+                                        class="h-6" />
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Copy right  -->
+                </div>
+                <div class="font-bold">
+                    &copy; 2022 Loopstudios. All Rights Reserved
                 </div>
             </div>
         </div>
