--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
                         </div>
                     </div>
                     <!-- Hamburger Logo  -->
+                    <div class="md:hidden">
+                        <button
+                            type="button"
+                            id="menu-btn"
+                            class="hamburger open z-40 block focus:outline-none md:hidden">
+                            <span class="hamburger-top"></span>
+                            <span class="hamburger-middle"></span>
+                            <span class="hamburger-bottom"></span>
+                        </button>
+                    </div>
                 </nav>
                 <!-- Mobile View -->
                 <div
