mobile section view with the links so it will be visible on mobile view

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <button
                             type="button"
                             id="menu-btn"
-                            class="hamburger open z-40 block focus:outline-none md:hidden">
+                            class="hamburger z-40 block focus:outline-none md:hidden">
                             <span class="hamburger-top"></span>
                             <span class="hamburger-middle"></span>
                             <span class="hamburger-bottom"></span>
@@ -62,6 +62,15 @@
                     </div>
                 </nav>
                 <!-- Mobile View -->
+                <div
+                    id="menu"
+                    class="absolute bottom-0 left-0 top-0 flex min-h-screen w-full flex-col space-y-3 self-end bg-black py-1 pl-12 pt-40 text-lg uppercase text-white">
+                    <a href="#" class="hover:text-pink-500">About</a>
+                    <a href="#" class="hover:text-pink-500">Careers</a>
+                    <a href="#" class="hover:text-pink-500">Events</a>
+                    <a href="#" class="hover:text-pink-500">Proudcts</a>
+                    <a href="#" class="hover:text-pink-500">Support</a>
+                </div>
                 <div
                     class="md-6xl mb-32 mt-32 max-w-lg border-2 p-4 font-sans text-4xl uppercase text-white md:m-32 md:mx-0 md:p-10">
                     Impressive Experiences That Deliver
